--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -9,6 +9,13 @@
 </head>
 <body class="theme-admin">
   <div class="dashboard">
+    <div class="mobile-header">
+      <div style="display: flex; align-items: center; gap: 10px;">
+        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <span class="badge badge-warning">Admin</span>
+      </div>
+    </div>
+
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
@@ -45,6 +52,12 @@
         </div>
       </div>
 
+      <!-- Alerts -->
+      <div class="alert alert-warning">
+        <strong><i class="bi bi-exclamation-triangle"></i> Atencao:</strong> 7 cadastros aguardam revisao manual.
+        <a href="kyc-fila.html" style="color: inherit; margin-left: 10px;">Revisar agora &rarr;</a>
+      </div>
+
       <!-- KPIs -->
       <div class="kpi-grid">
         <div class="kpi-card">
@@ -67,12 +80,6 @@
           <div class="kpi-value" style="color: var(--warning);">7</div>
           <div class="kpi-change"><a href="kyc-fila.html" style="color: var(--primary);">Ver fila &rarr;</a></div>
         </div>
-      </div>
-
-      <!-- Alerts -->
-      <div class="alert alert-warning">
-        <strong><i class="bi bi-exclamation-triangle"></i> Atencao:</strong> 7 cadastros aguardam revisao manual.
-        <a href="kyc-fila.html" style="color: inherit; margin-left: 10px;">Revisar agora &rarr;</a>
       </div>
 
       <div class="grid-2">
@@ -134,8 +141,8 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><strong>TechStart</strong></td>
-                  <td>
+                  <td data-label="Oferta"><strong>TechStart</strong></td>
+                  <td data-label="Progresso">
                     <div class="flex gap-10" style="align-items: center;">
                       <div class="progress" style="width: 80px;">
                         <div class="progress-bar" style="width: 75%;"></div>
@@ -143,11 +150,11 @@
                       <span>75%</span>
                     </div>
                   </td>
-                  <td>23</td>
+                  <td data-label="Dias">23</td>
                 </tr>
                 <tr>
-                  <td><strong>EcoFood</strong></td>
-                  <td>
+                  <td data-label="Oferta"><strong>EcoFood</strong></td>
+                  <td data-label="Progresso">
                     <div class="flex gap-10" style="align-items: center;">
                       <div class="progress" style="width: 80px;">
                         <div class="progress-bar success" style="width: 60%;"></div>
@@ -155,11 +162,11 @@
                       <span>60%</span>
                     </div>
                   </td>
-                  <td>45</td>
+                  <td data-label="Dias">45</td>
                 </tr>
                 <tr>
-                  <td><strong>HealthTech</strong></td>
-                  <td>
+                  <td data-label="Oferta"><strong>HealthTech</strong></td>
+                  <td data-label="Progresso">
                     <div class="flex gap-10" style="align-items: center;">
                       <div class="progress" style="width: 80px;">
                         <div class="progress-bar" style="width: 75%; background: var(--danger);"></div>
@@ -167,7 +174,7 @@
                       <span>75%</span>
                     </div>
                   </td>
-                  <td style="color: var(--danger);">12</td>
+                  <td data-label="Dias" style="color: var(--danger);">12</td>
                 </tr>
               </tbody>
             </table>
@@ -256,40 +263,49 @@
             </thead>
             <tbody>
               <tr>
-                <td>
+                <td data-label="Investidor">
                   <strong>Joao Carlos Silva</strong>
                   <br><small class="text-muted">123.456.789-00</small>
                 </td>
-                <td>TechStart Inovacao</td>
-                <td>R$ 5.000</td>
-                <td>19/01/2026</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
-                <td><span class="badge badge-warning">Ate 24/01</span></td>
+                <td data-label="Oferta">TechStart Inovacao</td>
+                <td data-label="Valor">R$ 5.000</td>
+                <td data-label="Data">19/01/2026</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Desistencia"><span class="badge badge-warning">Ate 24/01</span></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Investidor">
                   <strong>Maria Santos</strong>
                   <br><small class="text-muted">987.654.321-00</small>
                 </td>
-                <td>EcoFood Organicos</td>
-                <td>R$ 3.000</td>
-                <td>18/01/2026</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
-                <td><span class="badge badge-warning">Ate 23/01</span></td>
+                <td data-label="Oferta">EcoFood Organicos</td>
+                <td data-label="Valor">R$ 3.000</td>
+                <td data-label="Data">18/01/2026</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Desistencia"><span class="badge badge-warning">Ate 23/01</span></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Investidor">
                   <strong>Pedro Oliveira</strong>
                   <br><small class="text-muted">456.789.123-00</small>
                 </td>
-                <td>HealthTech Solutions</td>
-                <td>R$ 10.000</td>
-                <td>17/01/2026</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
-                <td><span class="badge badge-secondary">Expirado</span></td>
+                <td data-label="Oferta">HealthTech Solutions</td>
+                <td data-label="Valor">R$ 10.000</td>
+                <td data-label="Data">17/01/2026</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Desistencia"><span class="badge badge-secondary">Expirado</span></td>
               </tr>
             </tbody>
           </table>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
