--- a/pages/admin/parceiros.html
+++ b/pages/admin/parceiros.html
@@ -9,6 +9,13 @@
 </head>
 <body class="theme-admin">
   <div class="dashboard">
+    <div class="mobile-header">
+      <div style="display: flex; align-items: center; gap: 10px;">
+        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <span class="badge badge-warning">Admin</span>
+      </div>
+    </div>
+
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
@@ -103,97 +110,99 @@
             </thead>
             <tbody>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>TechStart LTDA</strong>
                   <br><small class="text-muted">Tecnologia • contato@techstart.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
-                <td>12.345.678/0001-90</td>
-                <td><strong>2</strong></td>
-                <td>-</td>
-                <td>R$ 875k</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
+                <td data-label="CNPJ">12.345.678/0001-90</td>
+                <td data-label="Ofertas"><strong>2</strong></td>
+                <td data-label="Distribuicoes">-</td>
+                <td data-label="Volume">R$ 875k</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>Investy Corretora</strong>
                   <br><small class="text-muted">Financeiro • contato@investy.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #0891b2; color: white;"><i class="bi bi-diagram-3"></i> Distrib.</span></td>
-                <td>22.333.444/0001-55</td>
-                <td>-</td>
-                <td><strong>12</strong></td>
-                <td>R$ 3.2M</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #0891b2; color: white;"><i class="bi bi-diagram-3"></i> Distribuidor</span></td>
+                <td data-label="CNPJ">22.333.444/0001-55</td>
+                <td data-label="Ofertas">-</td>
+                <td data-label="Distribuicoes"><strong>12</strong></td>
+                <td data-label="Volume">R$ 3.2M</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>FinPay Solucoes</strong>
                   <br><small class="text-muted">Fintech • contato@finpay.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #059669; color: white;"><i class="bi bi-arrows-angle-expand"></i> Ambos</span></td>
-                <td>55.666.777/0001-88</td>
-                <td><strong>3</strong></td>
-                <td><strong>5</strong></td>
-                <td>R$ 2.1M</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #059669; color: white;"><i class="bi bi-arrows-angle-expand"></i> Ambos</span></td>
+                <td data-label="CNPJ">55.666.777/0001-88</td>
+                <td data-label="Ofertas"><strong>3</strong></td>
+                <td data-label="Distribuicoes"><strong>5</strong></td>
+                <td data-label="Volume">R$ 2.1M</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>EcoFood SA</strong>
                   <br><small class="text-muted">Alimentacao • contato@ecofood.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
-                <td>98.765.432/0001-10</td>
-                <td><strong>1</strong></td>
-                <td>-</td>
-                <td>R$ 180k</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
+                <td data-label="CNPJ">98.765.432/0001-10</td>
+                <td data-label="Ofertas"><strong>1</strong></td>
+                <td data-label="Distribuicoes">-</td>
+                <td data-label="Volume">R$ 180k</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>Capital Partners</strong>
                   <br><small class="text-muted">Assessoria • contato@capitalpartners.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #0891b2; color: white;"><i class="bi bi-diagram-3"></i> Distrib.</span></td>
-                <td>77.888.999/0001-11</td>
-                <td>-</td>
-                <td><strong>8</strong></td>
-                <td>R$ 1.8M</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #0891b2; color: white;"><i class="bi bi-diagram-3"></i> Distribuidor</span></td>
+                <td data-label="CNPJ">77.888.999/0001-11</td>
+                <td data-label="Ofertas">-</td>
+                <td data-label="Distribuicoes"><strong>8</strong></td>
+                <td data-label="Volume">R$ 1.8M</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
-                <td>
+                <td data-label="Empresa">
                   <strong>HealthTech LTDA</strong>
                   <br><small class="text-muted">Saude • contato@healthtech.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
-                <td>11.222.333/0001-44</td>
-                <td><strong>1</strong></td>
-                <td>-</td>
-                <td>R$ 562k</td>
-                <td><span class="badge badge-success">Ativo</span></td>
-                <td><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Tipo"><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
+                <td data-label="CNPJ">11.222.333/0001-44</td>
+                <td data-label="Ofertas"><strong>1</strong></td>
+                <td data-label="Distribuicoes">-</td>
+                <td data-label="Volume">R$ 562k</td>
+                <td data-label="Status"><span class="badge badge-success">Ativo</span></td>
+                <td data-label="Acoes"><a href="parceiro-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr style="background: #fffbeb;">
-                <td>
+                <td data-label="Empresa">
                   <strong>Nova Startup XYZ</strong>
                   <br><small class="text-muted">Tecnologia • contato@startupxyz.com.br</small>
                 </td>
-                <td><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
-                <td>33.444.555/0001-66</td>
-                <td>0</td>
-                <td>-</td>
-                <td>-</td>
-                <td><span class="badge badge-warning"><i class="bi bi-clock"></i> Pendente</span></td>
-                <td>
-                  <button class="btn btn-success btn-sm" onclick="showModal('aprovarParceiroModal')"><i class="bi bi-check"></i></button>
-                  <button class="btn btn-outline btn-sm" onclick="showModal('recusarParceiroModal')"><i class="bi bi-x"></i></button>
+                <td data-label="Tipo"><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-broadcast"></i> Emissor</span></td>
+                <td data-label="CNPJ">33.444.555/0001-66</td>
+                <td data-label="Ofertas">0</td>
+                <td data-label="Distribuicoes">-</td>
+                <td data-label="Volume">-</td>
+                <td data-label="Status"><span class="badge badge-warning"><i class="bi bi-clock"></i> Pendente</span></td>
+                <td data-label="Acoes">
+                  <div class="flex gap-5">
+                    <button class="btn btn-success btn-sm" onclick="showModal('aprovarParceiroModal')"><i class="bi bi-check-circle"></i> Aprovar</button>
+                    <button class="btn btn-danger btn-sm" onclick="showModal('recusarParceiroModal')"><i class="bi bi-x-circle"></i> Reprovar</button>
+                  </div>
                 </td>
               </tr>
             </tbody>
@@ -229,6 +238,15 @@
             <strong style="color: #059669;"><i class="bi bi-arrows-angle-expand"></i> Ambos</strong>
             <p class="text-muted" style="font-size: 0.8rem; margin-top: 4px;">Pode criar ofertas proprias e tambem distribuir ofertas de outros emissores.</p>
           </div>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
