--- a/pages/investidor/carteira.html
+++ b/pages/investidor/carteira.html
@@ -9,6 +9,10 @@
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
+    <div class="mobile-header">
+      <a href="../../index.html" class="logo">CrowdInvest</a>
+    </div>
+
     <aside class="sidebar">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo">CrowdInvest</a>
@@ -379,13 +383,22 @@
             <table style="font-size: 0.85rem;">
               <thead><tr><th>Setor</th><th>Qtd</th><th>Valor</th><th>%</th></tr></thead>
               <tbody>
-                <tr><td><strong>Saude</strong></td><td>1</td><td>R$ 7.000</td><td>38%</td></tr>
-                <tr><td><strong>Tecnologia</strong></td><td>1</td><td>R$ 5.000</td><td>27%</td></tr>
-                <tr><td><strong>Agronegocio</strong></td><td>1</td><td>R$ 3.500</td><td>19%</td></tr>
-                <tr><td><strong>Imobiliario</strong></td><td>1</td><td>R$ 3.000</td><td>16%</td></tr>
+                <tr><td data-label="Setor"><strong>Saude</strong></td><td data-label="Qtd">1</td><td data-label="Valor">R$ 7.000</td><td data-label="%">38%</td></tr>
+                <tr><td data-label="Setor"><strong>Tecnologia</strong></td><td data-label="Qtd">1</td><td data-label="Valor">R$ 5.000</td><td data-label="%">27%</td></tr>
+                <tr><td data-label="Setor"><strong>Agronegocio</strong></td><td data-label="Qtd">1</td><td data-label="Valor">R$ 3.500</td><td data-label="%">19%</td></tr>
+                <tr><td data-label="Setor"><strong>Imobiliario</strong></td><td data-label="Qtd">1</td><td data-label="Valor">R$ 3.000</td><td data-label="%">16%</td></tr>
               </tbody>
             </table>
           </div>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
