--- a/pages/investidor/documentos.html
+++ b/pages/investidor/documentos.html
@@ -9,6 +9,10 @@
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
+    <div class="mobile-header">
+      <a href="../../index.html" class="logo">CrowdInvest</a>
+    </div>
+
     <aside class="sidebar">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo">CrowdInvest</a>
@@ -166,36 +170,45 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>19/01/2026</td>
-                  <td>Investimento PIX</td>
-                  <td>TechStart Inovacao</td>
-                  <td>R$ 5.000,00</td>
-                  <td><a href="#" class="btn btn-outline btn-sm">Download</a></td>
+                  <td data-label="Data">19/01/2026</td>
+                  <td data-label="Tipo">Investimento PIX</td>
+                  <td data-label="Empresa">TechStart Inovacao</td>
+                  <td data-label="Valor">R$ 5.000,00</td>
+                  <td data-label="Documento"><a href="#" class="btn btn-outline btn-sm">Download</a></td>
                 </tr>
                 <tr>
-                  <td>15/01/2026</td>
-                  <td>Investimento PIX</td>
-                  <td>TechStart Inovacao</td>
-                  <td>R$ 5.000,00</td>
-                  <td><a href="#" class="btn btn-outline btn-sm">Download</a></td>
+                  <td data-label="Data">15/01/2026</td>
+                  <td data-label="Tipo">Investimento PIX</td>
+                  <td data-label="Empresa">TechStart Inovacao</td>
+                  <td data-label="Valor">R$ 5.000,00</td>
+                  <td data-label="Documento"><a href="#" class="btn btn-outline btn-sm">Download</a></td>
                 </tr>
                 <tr>
-                  <td>10/01/2026</td>
-                  <td>Investimento PIX</td>
-                  <td>EcoFood Organicos</td>
-                  <td>R$ 3.000,00</td>
-                  <td><a href="#" class="btn btn-outline btn-sm">Download</a></td>
+                  <td data-label="Data">10/01/2026</td>
+                  <td data-label="Tipo">Investimento PIX</td>
+                  <td data-label="Empresa">EcoFood Organicos</td>
+                  <td data-label="Valor">R$ 3.000,00</td>
+                  <td data-label="Documento"><a href="#" class="btn btn-outline btn-sm">Download</a></td>
                 </tr>
                 <tr>
-                  <td>05/01/2026</td>
-                  <td>Investimento PIX</td>
-                  <td>HealthTech Solutions</td>
-                  <td>R$ 7.000,00</td>
-                  <td><a href="#" class="btn btn-outline btn-sm">Download</a></td>
+                  <td data-label="Data">05/01/2026</td>
+                  <td data-label="Tipo">Investimento PIX</td>
+                  <td data-label="Empresa">HealthTech Solutions</td>
+                  <td data-label="Valor">R$ 7.000,00</td>
+                  <td data-label="Documento"><a href="#" class="btn btn-outline btn-sm">Download</a></td>
                 </tr>
               </tbody>
             </table>
           </div>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
