--- a/pages/investidor/extrato.html
+++ b/pages/investidor/extrato.html
@@ -9,6 +9,10 @@
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
+    <div class="mobile-header">
+      <a href="../../index.html" class="logo">CrowdInvest</a>
+    </div>
+
     <aside class="sidebar">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo">CrowdInvest</a>
@@ -102,53 +106,53 @@
             </thead>
             <tbody>
               <tr>
-                <td>19/01/2026</td>
-                <td><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00128</small></td>
-                <td>TechStart Inovacao</td>
-                <td style="color: var(--danger);">- R$ 5.000,00</td>
-                <td><span class="badge badge-warning">Em desistencia</span></td>
+                <td data-label="Data">19/01/2026</td>
+                <td data-label="Descricao"><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00128</small></td>
+                <td data-label="Empresa">TechStart Inovacao</td>
+                <td data-label="Valor" style="color: var(--danger);">- R$ 5.000,00</td>
+                <td data-label="Status"><span class="badge badge-warning">Em desistencia</span></td>
               </tr>
               <tr>
-                <td>15/01/2026</td>
-                <td><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00115</small></td>
-                <td>TechStart Inovacao</td>
-                <td style="color: var(--danger);">- R$ 5.000,00</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Data">15/01/2026</td>
+                <td data-label="Descricao"><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00115</small></td>
+                <td data-label="Empresa">TechStart Inovacao</td>
+                <td data-label="Valor" style="color: var(--danger);">- R$ 5.000,00</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
               </tr>
               <tr>
-                <td>10/01/2026</td>
-                <td><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00098</small></td>
-                <td>EcoFood Organicos</td>
-                <td style="color: var(--danger);">- R$ 3.000,00</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Data">10/01/2026</td>
+                <td data-label="Descricao"><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00098</small></td>
+                <td data-label="Empresa">EcoFood Organicos</td>
+                <td data-label="Valor" style="color: var(--danger);">- R$ 3.000,00</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
               </tr>
               <tr style="background: #dcfce7;">
-                <td>08/01/2026</td>
-                <td><strong>Estorno (Desistencia)</strong><br><small class="text-muted">#EST-2026-00012</small></td>
-                <td>HealthTech Solutions</td>
-                <td style="color: var(--success);">+ R$ 2.000,00</td>
-                <td><span class="badge badge-success">Concluido</span></td>
+                <td data-label="Data">08/01/2026</td>
+                <td data-label="Descricao"><strong>Estorno (Desistencia)</strong><br><small class="text-muted">#EST-2026-00012</small></td>
+                <td data-label="Empresa">HealthTech Solutions</td>
+                <td data-label="Valor" style="color: var(--success);">+ R$ 2.000,00</td>
+                <td data-label="Status"><span class="badge badge-success">Concluido</span></td>
               </tr>
               <tr>
-                <td>05/01/2026</td>
-                <td><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00075</small></td>
-                <td>HealthTech Solutions</td>
-                <td style="color: var(--danger);">- R$ 7.000,00</td>
-                <td><span class="badge badge-success">Confirmado</span></td>
+                <td data-label="Data">05/01/2026</td>
+                <td data-label="Descricao"><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00075</small></td>
+                <td data-label="Empresa">HealthTech Solutions</td>
+                <td data-label="Valor" style="color: var(--danger);">- R$ 7.000,00</td>
+                <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
               </tr>
               <tr>
-                <td>03/01/2026</td>
-                <td><strong>Desistencia Solicitada</strong><br><small class="text-muted">#DES-2026-00005</small></td>
-                <td>HealthTech Solutions</td>
-                <td>R$ 2.000,00</td>
-                <td><span class="badge badge-secondary">Processado</span></td>
+                <td data-label="Data">03/01/2026</td>
+                <td data-label="Descricao"><strong>Desistencia Solicitada</strong><br><small class="text-muted">#DES-2026-00005</small></td>
+                <td data-label="Empresa">HealthTech Solutions</td>
+                <td data-label="Valor">R$ 2.000,00</td>
+                <td data-label="Status"><span class="badge badge-secondary">Processado</span></td>
               </tr>
               <tr>
-                <td>02/01/2026</td>
-                <td><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00045</small></td>
-                <td>HealthTech Solutions</td>
-                <td style="color: var(--danger);">- R$ 2.000,00</td>
-                <td><span class="badge badge-secondary">Desistencia</span></td>
+                <td data-label="Data">02/01/2026</td>
+                <td data-label="Descricao"><strong>Investimento</strong><br><small class="text-muted">#INV-2026-00045</small></td>
+                <td data-label="Empresa">HealthTech Solutions</td>
+                <td data-label="Valor" style="color: var(--danger);">- R$ 2.000,00</td>
+                <td data-label="Status"><span class="badge badge-secondary">Desistencia</span></td>
               </tr>
             </tbody>
           </table>
@@ -161,6 +165,15 @@
             <button class="page-item active">1</button>
             <button class="page-item nav-arrow disabled"><i class="bi bi-chevron-right"></i></button>
           </nav>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
