--- a/pages/parceiro/comunicados.html
+++ b/pages/parceiro/comunicados.html
@@ -26,6 +26,10 @@
 </head>
 <body class="theme-parceiro">
   <div class="dashboard">
+    <div class="mobile-header">
+      <a href="../../index.html" class="logo">CrowdInvest</a>
+    </div>
+
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo">CrowdInvest</a>
@@ -51,11 +55,13 @@
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
+        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> <span class="menu-text-emissor">Minhas Ofertas</span><span class="menu-text-distribuidor" style="display:none;">Ofertas Disponiveis</span></a></li>
         <li><a href="comunicados.html" class="active"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> <span class="menu-text-emissor">Investidores</span><span class="menu-text-distribuidor" style="display:none;">Meus Clientes</span></a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="distribuidor-content" style="display:none;"><a href="comissoes.html"><i class="bi bi-cash-stack"></i> Comissoes</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
+        <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
         <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
         <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
         <li><a href="../parceiro-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
@@ -66,51 +72,187 @@
     <main class="main-content">
       <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
-      <div class="page-header">
-        <div>
-          <h1 class="page-title">Comunicados aos Clientes</h1>
-          <p class="text-muted">Envie atualizacoes para seus investidores (com moderacao)</p>
+      <!-- CONTEUDO EMISSOR -->
+      <div class="emissor-content">
+        <div class="page-header">
+          <div>
+            <h1 class="page-title">Comunicados aos Investidores</h1>
+            <p class="text-muted">Envie atualizacoes para seus investidores (com moderacao)</p>
+          </div>
+          <button class="btn btn-primary" onclick="showModal('novoComunicadoModal')">
+            <i class="bi bi-plus-lg"></i> Novo Comunicado
+          </button>
         </div>
-        <button class="btn btn-primary" onclick="showModal('novoComunicadoModal')">
-          <i class="bi bi-plus-lg"></i> Novo Comunicado
-        </button>
+
+        <!-- Info sobre Moderação -->
+        <div class="alert alert-info mb-20">
+          <i class="bi bi-shield-check"></i>
+          <div>
+            <strong>Comunicados Moderados:</strong> Todos os comunicados sao revisados pela equipe CrowdInvest antes de serem enviados aos investidores.
+            Prazo de analise: <strong>ate 24 horas</strong> em dias uteis.
+          </div>
+        </div>
+
+        <!-- KPIs Emissor -->
+        <div class="kpi-grid mb-30">
+          <div class="kpi-card">
+            <div class="kpi-label">Aguardando Aprovacao</div>
+            <div class="kpi-value" style="color: var(--warning);">2</div>
+            <div class="kpi-change">Em analise</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Aprovados</div>
+            <div class="kpi-value" style="color: var(--success);">8</div>
+            <div class="kpi-change">Publicados</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Rejeitados</div>
+            <div class="kpi-value" style="color: var(--danger);">1</div>
+            <div class="kpi-change">Precisam revisao</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Rascunhos</div>
+            <div class="kpi-value" style="color: var(--secondary);">1</div>
+            <div class="kpi-change">Nao enviados</div>
+          </div>
+        </div>
+
+        <!-- Section: Aguardando Aprovação -->
+        <h3 style="margin-bottom: 15px;"><i class="bi bi-hourglass-split" style="color: var(--warning);"></i> Aguardando Aprovacao (2)</h3>
       </div>
 
-      <!-- Info sobre Moderação -->
-      <div class="alert alert-info mb-20">
-        <i class="bi bi-shield-check"></i>
-        <div>
-          <strong>Comunicados Moderados:</strong> Todos os comunicados sao revisados pela equipe CrowdInvest antes de serem enviados aos investidores.
-          Prazo de analise: <strong>ate 24 horas</strong> em dias uteis.
+      <!-- CONTEUDO DISTRIBUIDOR -->
+      <div class="distribuidor-content" style="display: none;">
+        <div class="page-header">
+          <div>
+            <h1 class="page-title">Comunicados das Ofertas</h1>
+            <p class="text-muted">Acompanhe os comunicados enviados aos seus clientes</p>
+          </div>
+        </div>
+
+        <!-- Info sobre Comunicados -->
+        <div class="alert alert-info mb-20">
+          <i class="bi bi-info-circle"></i>
+          <div>
+            <strong>Comunicados das Ofertas:</strong> Visualize os comunicados enviados pelos emissores para as ofertas em que seus clientes investiram.
+            Comunicados de ofertas sem clientes seus aparecem com opacidade reduzida.
+          </div>
+        </div>
+
+        <!-- KPIs Distribuidor -->
+        <div class="kpi-grid mb-30">
+          <div class="kpi-card">
+            <div class="kpi-label">Comunicados Recebidos</div>
+            <div class="kpi-value">15</div>
+            <div class="kpi-change">Total</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Ofertas com Clientes</div>
+            <div class="kpi-value" style="color: var(--success);">3</div>
+            <div class="kpi-change">Destacados</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Nao Lidos</div>
+            <div class="kpi-value" style="color: var(--warning);">4</div>
+            <div class="kpi-change">Novos</div>
+          </div>
+          <div class="kpi-card">
+            <div class="kpi-label">Clientes Impactados</div>
+            <div class="kpi-value" style="color: var(--primary);">23</div>
+            <div class="kpi-change">Seus clientes</div>
+          </div>
+        </div>
+
+        <!-- Comunicados de Ofertas com Clientes (Destacados) -->
+        <h3 style="margin-bottom: 15px;"><i class="bi bi-star-fill" style="color: var(--warning);"></i> Ofertas dos Seus Clientes</h3>
+
+        <div class="comunicado-card aprovado" style="border-left: 4px solid var(--success);">
+          <div class="flex-between" style="margin-bottom: 12px;">
+            <div>
+              <span class="badge badge-success"><i class="bi bi-people-fill"></i> 8 clientes seus</span>
+              <span class="text-muted" style="margin-left: 10px; font-size: 0.875rem;">Publicado em 18/01/2026</span>
+            </div>
+            <span class="badge badge-info">TechStart Inovacao</span>
+          </div>
+          <h4 style="margin-bottom: 8px;">Atualizacao: Nova parceria com BigCorp fechada!</h4>
+          <p class="text-muted" style="font-size: 0.9rem;">
+            Temos o prazer de anunciar que fechamos uma parceria estrategica com a BigCorp, que ira acelerar nosso crescimento em 2026...
+          </p>
+          <div class="flex gap-10 mt-20">
+            <button class="btn btn-primary btn-sm" onclick="showModal('verComunicadoModal')"><i class="bi bi-eye"></i> Ver Completo</button>
+          </div>
+        </div>
+
+        <div class="comunicado-card aprovado" style="border-left: 4px solid var(--success);">
+          <div class="flex-between" style="margin-bottom: 12px;">
+            <div>
+              <span class="badge badge-success"><i class="bi bi-people-fill"></i> 12 clientes seus</span>
+              <span class="text-muted" style="margin-left: 10px; font-size: 0.875rem;">Publicado em 10/01/2026</span>
+            </div>
+            <span class="badge badge-info">EcoFood Delivery</span>
+          </div>
+          <h4 style="margin-bottom: 8px;">Resultados do 4o Trimestre 2025</h4>
+          <p class="text-muted" style="font-size: 0.9rem;">
+            Prezados investidores, compartilhamos os resultados do ultimo trimestre com crescimento de 45% na receita...
+          </p>
+          <div class="flex gap-10 mt-20">
+            <button class="btn btn-primary btn-sm" onclick="showModal('verComunicadoModal')"><i class="bi bi-eye"></i> Ver Completo</button>
+          </div>
+        </div>
+
+        <!-- Comunicados de Outras Ofertas (Sem destaque) -->
+        <h3 style="margin: 30px 0 15px;"><i class="bi bi-chat-square-text" style="color: var(--secondary);"></i> Outras Ofertas Disponiveis</h3>
+
+        <div class="comunicado-card" style="opacity: 0.6; border-left: 4px solid var(--border);">
+          <div class="flex-between" style="margin-bottom: 12px;">
+            <div>
+              <span class="badge badge-secondary">Sem clientes</span>
+              <span class="text-muted" style="margin-left: 10px; font-size: 0.875rem;">Publicado em 15/01/2026</span>
+            </div>
+            <span class="badge badge-outline">FinTech Solutions</span>
+          </div>
+          <h4 style="margin-bottom: 8px;">Lancamento de nova funcionalidade</h4>
+          <p class="text-muted" style="font-size: 0.9rem;">
+            Comunicado sobre novo recurso de pagamentos instantaneos na plataforma...
+          </p>
+          <div class="flex gap-10 mt-20">
+            <button class="btn btn-outline btn-sm" onclick="showModal('verComunicadoModal')"><i class="bi bi-eye"></i> Ver Completo</button>
+          </div>
+        </div>
+
+        <div class="comunicado-card" style="opacity: 0.6; border-left: 4px solid var(--border);">
+          <div class="flex-between" style="margin-bottom: 12px;">
+            <div>
+              <span class="badge badge-secondary">Sem clientes</span>
+              <span class="text-muted" style="margin-left: 10px; font-size: 0.875rem;">Publicado em 12/01/2026</span>
+            </div>
+            <span class="badge badge-outline">GreenEnergy Corp</span>
+          </div>
+          <h4 style="margin-bottom: 8px;">Atualizacao do projeto solar</h4>
+          <p class="text-muted" style="font-size: 0.9rem;">
+            Informativo sobre o progresso da instalacao dos paineis solares no parque industrial...
+          </p>
+          <div class="flex gap-10 mt-20">
+            <button class="btn btn-outline btn-sm" onclick="showModal('verComunicadoModal')"><i class="bi bi-eye"></i> Ver Completo</button>
+          </div>
+        </div>
+
+        <!-- Paginação -->
+        <div class="pagination-wrapper">
+          <span class="pagination-info">Mostrando <strong>1-4</strong> de <strong>15</strong></span>
+          <nav class="pagination-minimal">
+            <button class="page-item nav-arrow disabled"><i class="bi bi-chevron-left"></i></button>
+            <button class="page-item active">1</button>
+            <button class="page-item">2</button>
+            <button class="page-item">3</button>
+            <button class="page-item">4</button>
+            <button class="page-item nav-arrow"><i class="bi bi-chevron-right"></i></button>
+          </nav>
         </div>
       </div>
 
-      <!-- KPIs -->
-      <div class="kpi-grid mb-30">
-        <div class="kpi-card">
-          <div class="kpi-label">Aguardando Aprovacao</div>
-          <div class="kpi-value" style="color: var(--warning);">2</div>
-          <div class="kpi-change">Em analise</div>
-        </div>
-        <div class="kpi-card">
-          <div class="kpi-label">Aprovados</div>
-          <div class="kpi-value" style="color: var(--success);">8</div>
-          <div class="kpi-change">Publicados</div>
-        </div>
-        <div class="kpi-card">
-          <div class="kpi-label">Rejeitados</div>
-          <div class="kpi-value" style="color: var(--danger);">1</div>
-          <div class="kpi-change">Precisam revisao</div>
-        </div>
-        <div class="kpi-card">
-          <div class="kpi-label">Rascunhos</div>
-          <div class="kpi-value" style="color: var(--secondary);">1</div>
-          <div class="kpi-change">Nao enviados</div>
-        </div>
-      </div>
-
-      <!-- Section: Aguardando Aprovação -->
-      <h3 style="margin-bottom: 15px;"><i class="bi bi-hourglass-split" style="color: var(--warning);"></i> Aguardando Aprovacao (2)</h3>
+      <!-- CONTEUDO COMUM - Comunicados do Emissor (mostrados apenas para emissor) -->
+      <div class="emissor-content">
 
       <div class="comunicado-card pendente">
         <div class="flex-between" style="margin-bottom: 12px;">
@@ -231,6 +373,16 @@
           <button class="btn btn-primary btn-sm" onclick="showModal('editarComunicadoModal')"><i class="bi bi-pencil"></i> Continuar Editando</button>
           <button class="btn btn-outline btn-sm" onclick="showModal('enviarAprovacaoModal')"><i class="bi bi-send"></i> Enviar para Aprovacao</button>
           <button class="btn btn-outline btn-sm" onclick="showModal('descartarModal')"><i class="bi bi-trash"></i> Descartar</button>
+        </div>
+      </div>
+      </div><!-- fim emissor-content -->
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -447,37 +599,5 @@
   </div>
 </div>
 
-<script>
-  let selectedProfile = localStorage.getItem('parceiro_profile') || 'emissor';
-  function selectProfileOption(profile) {
-    selectedProfile = profile;
-    document.querySelectorAll('.profile-option').forEach(opt => opt.classList.remove('active'));
-    document.getElementById('option' + profile.charAt(0).toUpperCase() + profile.slice(1)).classList.add('active');
-  }
-  function confirmarPerfil() {
-    const icon = document.getElementById('profileIcon');
-    const name = document.getElementById('profileName');
-    const tag = document.getElementById('profileTag');
-    if (selectedProfile === 'emissor') {
-      icon.className = 'profile-mode-icon emissor';
-      icon.innerHTML = '<i class="bi bi-broadcast"></i>';
-      name.textContent = 'Emissor';
-      tag.className = 'profile-mode-tag emissor';
-      tag.innerHTML = '<i class="bi bi-broadcast"></i> Emissor';
-    } else {
-      icon.className = 'profile-mode-icon distribuidor';
-      icon.innerHTML = '<i class="bi bi-diagram-3"></i>';
-      name.textContent = 'Distribuidor';
-      tag.className = 'profile-mode-tag distribuidor';
-      tag.innerHTML = '<i class="bi bi-diagram-3"></i> Distrib.';
-    }
-    hideModal('selecionarPerfilModal');
-    localStorage.setItem('parceiro_profile', selectedProfile);
-  }
-  document.addEventListener('DOMContentLoaded', function() {
-    selectProfileOption(selectedProfile);
-    if (selectedProfile === 'distribuidor') confirmarPerfil();
-  });
-</script>
 </body>
 </html>
