--- a/pages/parceiro/configuracoes.html
+++ b/pages/parceiro/configuracoes.html
@@ -9,6 +9,10 @@
 </head>
 <body class="theme-parceiro">
   <div class="dashboard">
+    <div class="mobile-header">
+      <a href="../../index.html" class="logo">CrowdInvest</a>
+    </div>
+
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
         <a href="../../index.html" class="logo">CrowdInvest</a>
@@ -34,10 +38,11 @@
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
+        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> <span class="menu-text-emissor">Minhas Ofertas</span><span class="menu-text-distribuidor" style="display:none;">Ofertas Disponiveis</span></a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
+        <li><a href="clientes.html"><i class="bi bi-people"></i> <span class="menu-text-emissor">Investidores</span><span class="menu-text-distribuidor" style="display:none;">Meus Clientes</span></a></li>
         <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="distribuidor-content" style="display:none;"><a href="comissoes.html"><i class="bi bi-cash-stack"></i> Comissoes</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
         <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
@@ -57,6 +62,7 @@
       <!-- Tabs -->
       <div class="tabs">
         <button class="tab active" onclick="switchTab(this, 'empresa')">Dados da Empresa</button>
+        <button class="tab" onclick="switchTab(this, 'equipe')">Equipe</button>
         <button class="tab" onclick="switchTab(this, 'conta')">Conta de Acesso</button>
         <button class="tab" onclick="switchTab(this, 'notif')">Notificacoes</button>
       </div>
@@ -90,6 +96,96 @@
             </div>
             <button type="button" class="btn btn-primary" onclick="showModal('dadosSalvosModal')">Salvar Alteracoes</button>
           </form>
+        </div>
+      </div>
+
+      <!-- Equipe -->
+      <div id="equipe" class="tab-content" style="display: none;">
+        <div class="card">
+          <div class="flex-between mb-20">
+            <div>
+              <h3>Gerenciar Equipe</h3>
+              <p class="text-muted">Adicione e gerencie os usuarios que acessam a plataforma pela sua empresa</p>
+            </div>
+            <button class="btn btn-primary" onclick="showModal('novoUsuarioModal')"><i class="bi bi-person-plus"></i> Novo Usuario</button>
+          </div>
+
+          <!-- Perfis info -->
+          <div class="grid-3 mb-20" style="gap: 15px;">
+            <div style="padding: 12px; background: rgba(139, 92, 246, 0.1); border-radius: var(--radius-sm); border-left: 3px solid #8b5cf6;">
+              <strong style="color: #8b5cf6;"><i class="bi bi-shield-lock"></i> Administrador</strong>
+              <p class="text-muted" style="font-size: 0.8rem; margin-top: 4px;">Acesso total ao sistema, pode gerenciar usuarios e ofertas.</p>
+            </div>
+            <div style="padding: 12px; background: rgba(8, 145, 178, 0.1); border-radius: var(--radius-sm); border-left: 3px solid #0891b2;">
+              <strong style="color: #0891b2;"><i class="bi bi-gear"></i> Operador</strong>
+              <p class="text-muted" style="font-size: 0.8rem; margin-top: 4px;">Gerencia comunicados, documentos e visualiza relatorios.</p>
+            </div>
+            <div style="padding: 12px; background: rgba(5, 150, 105, 0.1); border-radius: var(--radius-sm); border-left: 3px solid #059669;">
+              <strong style="color: #059669;"><i class="bi bi-person-badge"></i> Vendedor</strong>
+              <p class="text-muted" style="font-size: 0.8rem; margin-top: 4px;">Visualiza clientes, investimentos e relatorios de sua carteira.</p>
+            </div>
+          </div>
+
+          <div class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>Usuario</th>
+                  <th>E-mail</th>
+                  <th>Perfil</th>
+                  <th>Ultimo Acesso</th>
+                  <th>Status</th>
+                  <th>Acoes</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <strong>Joao Silva</strong>
+                    <br><small class="text-muted">Voce</small>
+                  </td>
+                  <td>joao@techstart.com.br</td>
+                  <td><span class="badge" style="background: #8b5cf6; color: white;"><i class="bi bi-shield-lock"></i> Administrador</span></td>
+                  <td>Agora</td>
+                  <td><span class="badge badge-success">Ativo</span></td>
+                  <td><button class="btn btn-outline btn-sm" disabled>Editar</button></td>
+                </tr>
+                <tr>
+                  <td><strong>Maria Santos</strong></td>
+                  <td>maria@techstart.com.br</td>
+                  <td><span class="badge" style="background: #0891b2; color: white;"><i class="bi bi-gear"></i> Operador</span></td>
+                  <td>19/01/2026 14:30</td>
+                  <td><span class="badge badge-success">Ativo</span></td>
+                  <td>
+                    <button class="btn btn-outline btn-sm" onclick="showModal('editarUsuarioModal')"><i class="bi bi-pencil"></i> Editar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><strong>Pedro Costa</strong></td>
+                  <td>pedro@techstart.com.br</td>
+                  <td><span class="badge" style="background: #059669; color: white;"><i class="bi bi-person-badge"></i> Vendedor</span></td>
+                  <td>18/01/2026 09:15</td>
+                  <td><span class="badge badge-success">Ativo</span></td>
+                  <td>
+                    <button class="btn btn-outline btn-sm" onclick="showModal('editarUsuarioModal')"><i class="bi bi-pencil"></i> Editar</button>
+                  </td>
+                </tr>
+                <tr style="background: #fffbeb;">
+                  <td>
+                    <strong>Ana Oliveira</strong>
+                    <br><small class="text-muted">Pendente ativacao</small>
+                  </td>
+                  <td>ana@techstart.com.br</td>
+                  <td><span class="badge" style="background: #059669; color: white;"><i class="bi bi-person-badge"></i> Vendedor</span></td>
+                  <td>-</td>
+                  <td><span class="badge badge-warning"><i class="bi bi-clock"></i> Pendente</span></td>
+                  <td>
+                    <button class="btn btn-outline btn-sm" onclick="showModal('reenviarConviteModal')"><i class="bi bi-envelope"></i> Reenviar</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
@@ -173,6 +269,15 @@
             </label>
           </div>
           <button type="button" class="btn btn-primary mt-20" onclick="showModal('preferenciasSalvasModal')">Salvar Preferencias</button>
+        </div>
+      </div>
+      <!-- Disclaimer Regulatorio CVM -->
+      <div class="dashboard-disclaimer">
+        <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
+        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <div class="warning-text">
+          <i class="bi bi-exclamation-triangle"></i>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -261,37 +366,5 @@
   </div>
 </div>
 
-<script>
-  let selectedProfile = localStorage.getItem('parceiro_profile') || 'emissor';
-  function selectProfileOption(profile) {
-    selectedProfile = profile;
-    document.querySelectorAll('.profile-option').forEach(opt => opt.classList.remove('active'));
-    document.getElementById('option' + profile.charAt(0).toUpperCase() + profile.slice(1)).classList.add('active');
-  }
-  function confirmarPerfil() {
-    const icon = document.getElementById('profileIcon');
-    const name = document.getElementById('profileName');
-    const tag = document.getElementById('profileTag');
-    if (selectedProfile === 'emissor') {
-      icon.className = 'profile-mode-icon emissor';
-      icon.innerHTML = '<i class="bi bi-broadcast"></i>';
-      name.textContent = 'Emissor';
-      tag.className = 'profile-mode-tag emissor';
-      tag.innerHTML = '<i class="bi bi-broadcast"></i> Emissor';
-    } else {
-      icon.className = 'profile-mode-icon distribuidor';
-      icon.innerHTML = '<i class="bi bi-diagram-3"></i>';
-      name.textContent = 'Distribuidor';
-      tag.className = 'profile-mode-tag distribuidor';
-      tag.innerHTML = '<i class="bi bi-diagram-3"></i> Distrib.';
-    }
-    hideModal('selecionarPerfilModal');
-    localStorage.setItem('parceiro_profile', selectedProfile);
-  }
-  document.addEventListener('DOMContentLoaded', function() {
-    selectProfileOption(selectedProfile);
-    if (selectedProfile === 'distribuidor') confirmarPerfil();
-  });
-</script>
 </body>
 </html>
